# superteam-bounty

./: .env  index.html  package-lock.json  package.json  vite.config.ts
flexin/: Anchor.toml
flexin/programs/flexin/: Cargo.toml
flexin/programs/flexin/src/: constant.rs  lib.rs  states.rs
flexin/tests/: flexin.ts
send-email-service/: .env  package.json
send-email-service/src/: index.js
src/: index.css  main.tsx
src/components/: AnimateGradientBackground.tsx  Card.tsx  ClashButton.tsx  ClashInput.tsx  Copyable.tsx  CustomWalletMultiButton.tsx  FullPageLoading.tsx  Glare.tsx  Marquee.tsx  Modal.tsx  ProfileNotFound.tsx  RoleSwitcher.tsx  Shine.tsx  SocialMediaHandler.tsx  SocialMediaHandlerV2.tsx  styles.css
src/pages/: CreateProposal.tsx  Dashboard.tsx  Landing.tsx  Profile.tsx  ProfileV2.tsx  Reward.tsx  RoleSwitcher.tsx
src/store/: app.ts  landing.ts
src/ui/: Common.style.tsx  Header.style.tsx  Header.tsx  Modal.style.tsx
src/utils/: Gradient.js  constants.ts  flexin.json  flexin.ts  idl.json  index.tsx  squads_mpl.ts
